--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
     
     <body>
         <header>
-            <div class="logo">
-
-            </div>
-            <div class="navigation">
-                <nav>
-                    <ul>
-                        
-                    </ul>
-                </nav>
-            </div>
+            <a href="">
+                <img class="logo" src="images/logo.png" alt="logo">
+            </a>
+            <nav id="header-nav">
+                <ul class="nav-list">
+                    <li class="nav-li"><a class="nav-link current" href="#">Link 1</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Link 2</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Link 3</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Link 4</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Link 5</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Link 6</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Link 7</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Link 8</a></li>    
+                </ul>
+            </nav>
         </header>
         <main>
 
