--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             </a>
             <nav id="header-nav">
                 <ul class="nav-list">
-                    <li class="nav-li"><a class="nav-link current" href="#">Link 1</a></li>
-                    <li class="nav-li"><a class="nav-link" href="#">Link 2</a></li>
-                    <li class="nav-li"><a class="nav-link" href="#">Link 3</a></li>
-                    <li class="nav-li"><a class="nav-link" href="#">Link 4</a></li>
-                    <li class="nav-li"><a class="nav-link" href="#">Link 5</a></li>
-                    <li class="nav-li"><a class="nav-link" href="#">Link 6</a></li>
-                    <li class="nav-li"><a class="nav-link" href="#">Link 7</a></li>
-                    <li class="nav-li"><a class="nav-link" href="#">Link 8</a></li>    
+                    <li class="nav-li"><a class="nav-link current" href="#">About</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Servicios</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Mapa</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Experiencia</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Mentoring</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Publicaciones</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Blog</a></li>
+                    <li class="nav-li"><a class="nav-link" href="#">Contacto</a></li>    
                 </ul>
             </nav>
         </header>
