--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/index-style.css">
-        <title>Document</title>
+        <title>JT Geo</title>
     </head>
     
     <body>
@@ -28,7 +28,7 @@
             </nav>
         </header>
         <main>
-
+            
         </main>
     </body>
 </html>
