--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             </nav>
         </header>
         <main>
-            
+            <div class="content">
+                
+            </div>
         </main>
     </body>
 </html>
