--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </a>
             <nav id="header-nav">
                 <ul class="nav-list">
-                    <li class="nav-li"><a class="nav-link current" href="#">Home</a></li>
+                    <li class="nav-li"><a class="nav-link current-link" href="#">Home</a></li>
                     <li class="nav-li"><a class="nav-link" href="#">Servicios</a></li>
                     <li class="nav-li"><a class="nav-link" href="#">Mapa</a></li>
                     <li class="nav-li"><a class="nav-link" href="#">Experiencia</a></li>
@@ -28,7 +28,7 @@
             </nav>
         </header>
         <main>
-            <div class="content">
+            <div class="content-box">
                 
             </div>
         </main>
