Add HTML structure for first content section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         <main>
             <div class="content-box">
                 <h1 class="main-heading">JT Geofísica</h1>
+                <div class="section img-right">
+                    <div class="text">
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                    <div class="image-placeholder">
+
+                    </div>
+                </div>
             </div>
         </main>
     </body>
