Add sample content box layout
The layout is a sample and still needs a lot of refining. The image and
the method used for displaying it are also provisional.

--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
                 <h1 class="main-heading">JT Geofísica</h1>
                 <div class="section img-right">
                     <div class="text">
-                        <h2></h2>
-                        <p></p>
+                        <h2 class="subheading">Experiencia</h2>
+                        <p class="common-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, obcaecati necessitatibus perferendis exercitationem fugiat mollitia dolor iure, tempore sit nulla doloremque vitae. Dolores sunt illo ad fugit pariatur esse reprehenderit.</p>
+                        <p class="common-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque perspiciatis, voluptates cupiditate nulla doloremque laborum. Fugiat amet sapiente similique eligendi, exercitationem maxime officia sed laudantium provident quidem, corrupti tempore accusantium?</p>
+                        <p class="common-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem, sit. Quo eligendi sit veritatis deleniti, fugiat autem fugit necessitatibus sint. Corporis ab aperiam sed, tempore accusamus quibusdam eum omnis possimus.</p>
                     </div>
-                    <div class="image-placeholder">
-
+                    <div class="image-div">
                     </div>
                 </div>
             </div>
