Add new content box structure and example text

--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
                 </ul>
             </nav>
         </header>
+        
         <main>
             <div class="content-box">
-                <h1 class="main-heading">JT Geofísica</h1>
+                <h1>JT Geofísica</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestias earum numquam reiciendis ducimus quos, temporibus a doloribus ipsam ab laudantium incidunt rerum officia dolorem, velit voluptas dignissimos? Nam, porro! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis labore quia provident ad corrupti, voluptas ipsum reiciendis, veniam voluptate expedita culpa atque a aliquid. Esse deserunt aliquid quisquam reiciendis omnis!</p>
+                <div class="text">
+
+                </div>
+                <div class="img">
+
+                </div>
             </div>
         </main>
     </body>
