Add example text to text div

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <h1 class="main-heading">JT Geofísica</h1>
                 <div class="content">
                     <div class="text">
-
+                        <h2 class="subheading">Subheading</h2>
+                        <p class="common-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint alias incidunt dolore impedit molestiae earum reiciendis quia iste quas quibusdam nostrum voluptates sapiente fuga voluptatum, nobis quo totam, porro fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt consequuntur, tempore porro illo voluptates facilis impedit consequatur corporis pariatur sit placeat repudiandae ad in amet assumenda. Aut corporis tempora cupiditate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim nesciunt, provident possimus architecto cum culpa sit quis excepturi expedita quibusdam nulla impedit a deserunt ducimus sint atque rerum mollitia.</p>
                     </div>
                     <div class="img">
 
