Add sample left and tight image text cards

--- a/index.html
+++ b/index.html
@@ -32,12 +32,23 @@
             <div class="content-box">
                 <h1 class="main-heading">JT Geofísica</h1>
                 <div class="content">
-                    <div class="text">
-                        <h2 class="subheading">Subheading</h2>
-                        <p class="common-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint alias incidunt dolore impedit molestiae earum reiciendis quia iste quas quibusdam nostrum voluptates sapiente fuga voluptatum, nobis quo totam, porro fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt consequuntur, tempore porro illo voluptates facilis impedit consequatur corporis pariatur sit placeat repudiandae ad in amet assumenda. Aut corporis tempora cupiditate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim nesciunt, provident possimus architecto cum culpa sit quis excepturi expedita quibusdam nulla impedit a deserunt ducimus sint atque rerum mollitia.</p>
-                    </div>
-                    <div class="img">
+                    <div class="text-card img-right">
+                        <div class="text">
+                            <h2 class="subheading">Subheading 1</h2>
+                            <p class="common-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint alias incidunt dolore impedit molestiae earum reiciendis quia iste quas quibusdam nostrum voluptates sapiente fuga voluptatum, nobis quo totam, porro fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt consequuntur, tempore porro illo voluptates facilis impedit consequatur corporis pariatur sit placeat repudiandae ad in amet assumenda. Aut corporis tempora cupiditate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim nesciunt, provident possimus architecto cum culpa sit quis excepturi expedita quibusdam nulla impedit a deserunt ducimus sint atque rerum mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque magnam incidunt doloremque voluptate deleniti, molestiae iste fugit ad quod reprehenderit et, ullam vel ipsum perspiciatis expedita necessitatibus, ab voluptates. Neque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum fuga enim obcaecati! Incidunt doloribus culpa natus laudantium ut, maxime tenetur quia odit placeat facere illum pariatur ducimus ullam error alias!</p>
+                        </div>
+                        <div class="img">
 
+                        </div>
+                    </div>
+                    <div class="text-card img-leftt">
+                        <div class="img">
+
+                        </div>
+                        <div class="text">
+                            <h2 class="subheading">Subheading 2</h2>
+                            <p class="common-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. At itaque assumenda perferendis qui eius aperiam dolorum nemo quod animi iusto vitae vel et debitis impedit, error, porro ex provident esse. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum inventore minima laboriosam sunt, asperiores nihil totam quasi incidunt vel in quod perferendis exercitationem possimus temporibus earum nobis quam officia. Ipsa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti aperiam cupiditate officiis, ex atque magni. Distinctio, eligendi! Laudantium, voluptates consequuntur molestiae a cum tempore obcaecati dolorum laborum ipsam consectetur necessitatibus! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit sit, aliquam totam hic voluptatibus porro odit nulla tenetur et quo, doloremque molestiae? Itaque impedit a cumque amet omnis vero ad?</p>
+                        </div>
                     </div>
                 </div>
             </div>
