Change image placeholder alignment and size

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <p class="common-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, possimus. Veniam, ipsa? Dicta necessitatibus, itaque similique aperiam voluptatum possimus aliquid deserunt magni reprehenderit odit est fugiat quia vero a facilis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos quisquam voluptas nam at quos temporibus voluptate porro repellendus maxime fugiat aut est et esse modi, vel optio cumque maiores necessitatibus.</p>
                         </div>
                         <div class="img">
-                            <div class="img-placeholder"></div>
+                            <div class="img-placeholder-1"></div>
                         </div>
                     </div>
                     <div class="text-card img-left">
