Add bottom card image placeholders

--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
                             <p class="common-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam reprehenderit eos, sed explicabo, deserunt at molestiae architecto dicta totam quo cupiditate doloremque! Nesciunt doloremque, dicta deleniti eos commodi qui sapiente! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod vero recusandae modi illo veniam culpa et maxime, earum itaque id unde asperiores! Sed dolore dignissimos illum atque voluptate veniam maxime?</p>
                             <p class="common-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, possimus. Veniam, ipsa? Dicta necessitatibus, itaque similique aperiam voluptatum possimus aliquid deserunt magni reprehenderit odit est fugiat quia vero a facilis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos quisquam voluptas nam at quos temporibus voluptate porro repellendus maxime fugiat aut est et esse modi, vel optio cumque maiores necessitatibus.</p>
                         </div>
-                        <div class="img">
-                            <div class="img-placeholder-1"></div>
+                        <div class="img upper">
+                            <div class="img-placeholder-right"></div>
                         </div>
                     </div>
                     <div class="text-card img-left">
-                        <div class="img">
-                            
+                        <div class="img bottom">
+                            <div class="img-placeholder-left first"></div>
+                            <div class="img-placeholder-left second"></div>
                         </div>
                         <div class="text">
                             <h2 class="subheading">Subheading 2</h2>
