--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/index-style.css">
+        <link rel="icon" href="images/logo-jat.png">
         <title>JT Geo</title>
     </head>
     
