--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/index-style.css">
         <link rel="icon" href="images/logo-jat.png">
-        <title>JT Geo</title>
+        <title>JT Geofísica</title>
     </head>
     
     <body>
