--- a/frontpage.html
+++ b/frontpage.html
@@ -11,6 +11,13 @@
   </head>
   
   <body>
-    
+    <div class="container">
+      <div class="text">
+
+      </div>
+      <div class="image">
+        
+      </div>
+    </div>
   </body>
 </html>
