--- a/frontpage.html
+++ b/frontpage.html
@@ -12,10 +12,14 @@
   
   <body>
     <div class="container">
-      <div class="text">
-
+      <div class="text-container">
+        <img src="images/homepage-logo.png" alt="jat-logo">
+        <p id="yellow">Geophysical Consultant</p>
+        <p>Oil & Gas Reservoir Seismic Services</p>
+        <p>Project Execution & Guidance</p>
+        <p>Staff Training & Mentoring</p>
       </div>
-      <div class="image">
+      <div class="jat-image-container">
         
       </div>
     </div>
