Add 'more' link to text container

--- a/frontpage.html
+++ b/frontpage.html
@@ -18,6 +18,7 @@
         <p>Oil & Gas Reservoir Seismic Services</p>
         <p>Project Execution & Guidance</p>
         <p>Staff Training & Mentoring</p>
+        <a href="#">more ↓</a>
       </div>
       <div class="jat-image-container">
         
