Add image to jat-image-container div

--- a/frontpage.html
+++ b/frontpage.html
@@ -21,7 +21,7 @@
         <a href="#">more ↓</a>
       </div>
       <div class="jat-image-container">
-        
+        <img src="images/jat-picture.jpeg" alt="jat picture">
       </div>
     </div>
   </body>
