--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         <header>
             <a href="#"><img src="images/logo.png" alt="logo"></a>
             <nav>
-                <p class="menu">Menu</p>
+                <button class="dropbtn">Menu</button>
+                <div class="dropdown-links">
+                    <a href="#" class="nav-link">Home</a>
+                    <a href="#" class="nav-link">Services</a>
+                    <a href="#" class="nav-link">Training</a>
+                    <a href="#" class="nav-link">Background</a>
+                    <a href="#" class="nav-link">Blog</a>
+                    <a href="#" class="nav-link">Contact</a>
+                </div>
             </nav>
         </header>
         
