Revert "Add functional but not yet well styled dropdown menu"
This reverts commit c6646a4db6ea1e119dda3953fc5afbb0e321e576.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <a href="#"><img src="images/logo.png" alt="logo"></a>
             <nav>
                 <button class="dropbtn">Menu</button>
-                <div class="dropdown-content">
-                    <a href="#" class="nav-link current">Home</a>
+                <div class="dropdown-links">
+                    <a href="#" class="nav-link">Home</a>
                     <a href="#" class="nav-link">Services</a>
                     <a href="#" class="nav-link">Training</a>
                     <a href="#" class="nav-link">Background</a>
