Add main heading

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </header>
         
         <main>
-            
+            <div class="title">
+                <h1>JT Geophysics</h1>
+            </div>
         </main>
     </body>
 </html>
