--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/index-style.css">
         <link rel="icon" href="images/logo.png">
+        <script src="scripts/dropdown-menu.js" defer></script>
         <title>JT Geofísica</title>
     </head>
     
