--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
             </nav>
         </header>
         
-        <main>
-            <div class="title">
-                <h1>JT Geophysics</h1>
-            </div>
-        </main>
+        <div class="content">
+
+        </div>
     </body>
 </html>
