Add some content. Nothing close to final

--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
         </header>
         
         <div class="content">
-
+            <div class="title">
+                <h1>JT Geophysics</h1>
+            </div>
+            <div class="card">
+                <div class="left">
+                    <h2 class="subtitle">Predictive System & Quantitative Interpretation</h2>
+                    <img src="images/homepage-chart.jpeg" alt="chart" class="chart">
+                </div>
+                <div class="right">
+                    <p>A workflow based on seismic information assisted by wells intended to predict the subsurface distribution of those properties that best describe the behavior of the reservoir when set in production. The output of the system, provided that a good interpretation procedure is applied, must lead to maximize the chances of drilling success.​</p>
+                    <p>There is not a unique workflow, it is designed for each case according to the objectives and the available information instead. Anyway, some common elements can be distinguished:​</p>
+                </div>
+            </div>
         </div>
     </body>
-</html>
+</html>  
