--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p>Geology -the petroleum system to be more precise-  explains the occurrence of economical hydrocarbon accumulations. So, it is not about reaching a “magic attribute that finds oil”  but the integration to a multidisciplinary predictive system for risk minimizing instead. In other words, only by the contribution to geological knowledge is that Geophysics does help.​</p>
                 </div>
                 <div class="card-img">
-
+                    <img src="images/homepage-chart.jpeg" alt="chart">
                 </div>
             </div>
         </div>
