--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
             </div>
 
             <div class="card normal-layout">
+                <div class="card-text">
+                    <h2 class="subheading">Geophysical Services for Reservoir</h2>
 
+                    <p>Based on an extensive experience in a wide range of geophysical techniques, supported by more than 30 years of continuous work on all types of geological environments I offer services of consultancy and advisory on design and application of workflows associated to the Predictive System. Over 140 projects of characterization of all kinds of reservoirs for 35 operating companies allow me to face several workflows focused on taking maximum advantage of available information integrating techniques such as​:</p>
+                </div>
+                <div class="card-media">
+    
+                </div>
             </div>
         </div>
     </body>
