Add list to second card

--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
                     <h2 class="subheading">Geophysical Services for Reservoir</h2>
 
                     <p>Based on an extensive experience in a wide range of geophysical techniques, supported by more than 30 years of continuous work on all types of geological environments I offer services of consultancy and advisory on design and application of workflows associated to the Predictive System. Over 140 projects of characterization of all kinds of reservoirs for 35 operating companies allow me to face several workflows focused on taking maximum advantage of available information integrating techniques such as​:</p>
+                    
+                    <ul>
+                        <li>Well to seismic tie analysis. VSP studies</li>
+                        <li>Seismic data conditioning</li>
+                        <li>Feasibility studies</li>
+                        <li>Seismic inversion</li>
+                        <li>AVO studies</li>
+                        <li>Artificial intelligence</li>
+                        <li>Geostatistical mapping</li>
+                        <li>Anisotropic response studies (AVAZ)</li>
+                        <li>Geomechanical studies: pore pressure & insitu stress</li>
+                        <li>Quantitative interpretation</li>
+                    </ul>
                 </div>
                 <div class="card-media">
     
