--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                     </ul>
                 </div>
                 <div class="card-media">
-    
+                    <video autoplay muted loop>
+                        <source src="untracked/para Marco WEB Home page/V_Textos1.mp4">
+                    </video>
                 </div>
             </div>
         </div>
