--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
                     </video>
                 </div>
             </div>
+
+            <div class="card reverse-layout">
+                <div class="card-text">
+                    <h2 class="subheading">Knowledge Transfer & Technology Development</h2>
+                    <p>Along the professional development, as a natural consequence of the execution of the projects, I was contracted to transmit the know-how to companies’ technical staffs: 17 training courses and workshops based on real data for oil companies from 9 countries,  from Mexico to Chile. Subjects ranging from individual techniques as seismic inversion & AVO and artificial intelligence for reservoir properties prediction to integrated workflows for characterization of  unconventional and fractured reservoirs including azimuthal inversion (AVAZ).​</p>
+                    <p>The experience gained encouraged me to face the creation and development of the degree seminar “Techniques for Seismic Reservoir Characterization”, in which I work as a Full Professor. It is being implemented with good impact since 2019 in the Facultad de Ciencias Astronómicas y Geofísicas (FCAG) de la Universidad Nacional de La Plata (UNLP).​</p>
+                    <p>As complement of academic activity, I am member of the Laboratory MAGGIA-FCAG (Space Meteorology, Earth Atmosphere, Geodesy, Geodynamics, Instrumental Development & Astrometry), as a way to strengthen the link between Academy and Industry for the creation of technology and applications oriented to geophysical prospecting.​</p>
+                </div>
+                <div class="card-media">
+
+                </div>
+            </div>
         </div>
     </body>
 </html>  
