Add basic (non animated) structure for slideshow

--- a/index.html
+++ b/index.html
@@ -96,8 +96,16 @@
                     <p>The experience gained encouraged me to face the creation and development of the degree seminar “Techniques for Seismic Reservoir Characterization”, in which I work as a Full Professor. It is being implemented with good impact since 2019 in the Facultad de Ciencias Astronómicas y Geofísicas (FCAG) de la Universidad Nacional de La Plata (UNLP).​</p>
                     <p>As complement of academic activity, I am member of the Laboratory MAGGIA-FCAG (Space Meteorology, Earth Atmosphere, Geodesy, Geodynamics, Instrumental Development & Astrometry), as a way to strengthen the link between Academy and Industry for the creation of technology and applications oriented to geophysical prospecting.​</p>
                 </div>
-                <div class="card-media">
-
+                <div class="card-media slideshow-container">
+                    <div class="mySlides fade">
+                        <img src="untracked/desert.jpeg" alt="desert">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="untracked/forest.jpeg" alt="forest">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="untracked/mountains.jpeg" alt="mountains">
+                    </div>
                 </div>
             </div>
         </div>
