Add slideshow in third content card

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="styles/index-style.css">
         <link rel="icon" href="images/logo.png">
         <script src="scripts/dropdown-menu.js" defer></script>
+        <script src="scripts/slideshow.js" defer></script>
         <title>JT Geofísica</title>
     </head>
     
