Add sample images to slideshow and update readme

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
                 </div>
                 <div class="card-media slideshow-container">
                     <div class="mySlides fade">
-                        <img src="untracked/desert.jpeg" alt="desert">
+                        <img src="images/desert-sample.jpeg" alt="desert">
                     </div>
                     <div class="mySlides fade">
-                        <img src="untracked/forest.jpeg" alt="forest">
+                        <img src="images/forest-sample.jpeg" alt="forest">
                     </div>
                     <div class="mySlides fade">
-                        <img src="untracked/mountains.jpeg" alt="mountains">
+                        <img src="images/mountains-sample.jpeg" alt="mountains">
                     </div>
                 </div>
             </div>
