Change max content width for mobile

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="card-media">
                     <video autoplay muted loop>
-                        <source src="untracked/para Marco WEB Home page/video-mapa-v2.mp4">
+                        <source src="untracked/video_mapa.mp4">
                     </video>
                 </div>
             </div>
