Change content breakpoint to 1000px
Added 'chart' class to the first card-media (the chart one) to prevent
misalignment of the chart on resize. Now it sticks to the top of its
container.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     
                     <p>Geology -the petroleum system to be more precise-  explains the occurrence of economical hydrocarbon accumulations. So, it is not about reaching a “magic attribute that finds oil”  but the integration to a multidisciplinary predictive system for risk minimizing instead. In other words, only by the contribution to geological knowledge is that Geophysics does help.​</p>
                 </div>
-                <div class="card-media">
+                <div class="card-media chart">
                     <img src="images/homepage-chart-english.jpg" alt="chart">
                 </div>
             </div>
