Add div container for background image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                 </div>
             </nav>
         </header>
+
+        <div class="bg"></div>
         
         <div class="content">
             <div class="title">
