--- a/frontpage.html
+++ b/frontpage.html
@@ -11,6 +11,17 @@
   </head>
   
   <body>
-    
+    <div class="photo">
+      <img src="images/jat-picture.jpeg" alt="">
+    </div>
+    <div class="logo-and-text">
+      <img src="images/homepage-logo.png" alt="">
+      <div class="text">
+        <h2>Geophysical Consultant</h2>
+        <p>Oil & Gas Reservoir Seismic Services</p>
+        <p>Project Execution & Guidance</p>
+        <p>Staff Training & Mentoring</p>
+      </div>
+    </div>
   </body>
 </html>
