Reduce home video's size and update link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="card-media">
                     <video autoplay muted loop>
-                        <source src="untracked/video_mapa.mp4">
+                        <source src="videos/video_mapa.mp4">
                     </video>
                 </div>
             </div>
