--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../styles/normalize.css">
-        <link rel="stylesheet" href="../styles/contact.css">
-        <link rel="icon" href="../images/logo.png">
-        <script src="../scripts/dropdown-menu.js" defer></script>
-        <title>JT Geofísica</title>
-    </head>
-    
-    <body>
-        <header>
-            <a href="#"><img src="../images/logo.png" alt="logo"></a>
-            <nav>
-                <button class="dropbtn">Menu</button>
-                <div class="dropdown-content">
-                    <a href="#" class="nav-link current">Home</a>
-                    <a href="#" class="nav-link">Services</a>
-                    <a href="#" class="nav-link">Training</a>
-                    <a href="#" class="nav-link">Background</a>
-                    <a href="#" class="nav-link">Blog</a>
-                    <a href="#" class="nav-link">Contact</a>
-                </div>
-            </nav>
-        </header>
-        
-        <div class="content">
 
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../styles/normalize.css">
+    <link rel="stylesheet" href="../../styles/index-style.css">
+    <link rel="icon" href="../../images/logo.png">
+    <script src="../../scripts/dropdown-menu.js" defer></script>
+    <script src="../../scripts/slideshow.js" defer></script>
+    <title>JT Geofísica</title>
+</head>
+
+<body>
+    <header>
+        <a href="#"><img src="../../images/logo.png" alt="logo"></a>
+        <nav>
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="#" class="nav-link current">Home</a>
+                <a href="#" class="nav-link">Services</a>
+                <a href="#" class="nav-link">Training</a>
+                <a href="#" class="nav-link">Background</a>
+                <a href="#" class="nav-link">Blog</a>
+                <a href="#" class="nav-link">Contact</a>
+            </div>
+        </nav>
+    </header>
+
+    <div class="bg"></div>
+
+    <div class="content">
+
+    </div>
+</body>
+
 </html>
