--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,12 +19,12 @@
         <nav>
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="#" class="nav-link current">Home</a>
+                <a href="#" class="nav-link">Home</a>
                 <a href="#" class="nav-link">Services</a>
                 <a href="#" class="nav-link">Training</a>
                 <a href="#" class="nav-link">Background</a>
                 <a href="#" class="nav-link">Blog</a>
-                <a href="#" class="nav-link">Contact</a>
+                <a href="#" class="nav-link current">Contact</a>
             </div>
         </nav>
     </header>
@@ -32,7 +32,7 @@
     <div class="bg"></div>
 
     <div class="content">
-
+        
     </div>
 </body>
 
