Add contact page (EN)

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,6 +33,23 @@
             <div class="title">
                 <h1>Contact Information</h1>
             </div>
+            <div class="info-container">
+                <h2>Name</h2>
+                <p>Juan A. Tavella</p>
+            </div>
+            <div class="info-container">
+                <h2>Telephone</h2>
+                <p>+54 9 221 541 7949</p>
+            </div>
+            <div class="info-container">
+                <h2>E-mail</h2>
+                <p>jtavella@jt-geofisika.com</p>
+            </div>
+            <h2 id="social">Follow me</h2>
+            <div class="social-media-links">
+                <a href="#"><img src="../images/LI-In-Bug.png" alt="linkedin logo"></a>
+                <a id="youtube" href="#"><img src="../images/yt_icon_rgb.png" alt="youtube icon"></a>
+            </div>
         </div>
     </body>
 </html>
