Add contact page (ES)

--- a/pages/es/contact-es.html
+++ b/pages/es/contact-es.html
@@ -1,34 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../../styles/normalize.css">
-        <link rel="stylesheet" href="../../styles/contact.css">
-        <link rel="icon" href="../../images/logo.png">
-        <script src="../../scripts/dropdown-menu.js" defer></script>
-        <title>JT Geofísica</title>
-    </head>
-    
-    <body>
-        <header>
-            <a href="#"><img src="../../images/logo.png" alt="logo"></a>
-            <nav>
-                <button class="dropbtn">Menu</button>
-                <div class="dropdown-content">
-                    <a href="#" class="nav-link current">Home</a>
-                    <a href="#" class="nav-link">Services</a>
-                    <a href="#" class="nav-link">Training</a>
-                    <a href="#" class="nav-link">Background</a>
-                    <a href="#" class="nav-link">Blog</a>
-                    <a href="#" class="nav-link">Contact</a>
-                </div>
-            </nav>
-        </header>
-        
-        <div class="content">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../styles/normalize.css">
+    <link rel="stylesheet" href="../../styles/contact.css">
+    <link rel="icon" href="../../images/logo.png">
+    <script src="../../scripts/dropdown-menu.js" defer></script>
+    <title>JT Geofísica</title>
+</head>
+
+<body>
+    <header>
+        <a href="#"><img src="../../images/logo.png" alt="logo"></a>
+        <nav>
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="#" class="nav-link">Home</a>
+                <a href="#" class="nav-link">Services</a>
+                <a href="#" class="nav-link">Training</a>
+                <a href="#" class="nav-link">Background</a>
+                <a href="#" class="nav-link">Blog</a>
+                <a href="#" class="nav-link current">Contact</a>
+            </div>
+        </nav>
+    </header>
+
+    <div class="bg"></div>
+
+    <div class="content">
+        <div class="title">
+            <h1>Informacion de Contacto</h1>
         </div>
-    </body>
+        <div class="info-container">
+            <h2>Nombre</h2>
+            <p>Juan A. Tavella</p>
+        </div>
+        <div class="info-container">
+            <h2>Telefono</h2>
+            <p>+54 9 221 541 7949</p>
+        </div>
+        <div class="info-container">
+            <h2>E-mail</h2>
+            <p>jtavella@jt-geofisika.com</p>
+        </div>
+        <h2 id="social">Seguime</h2>
+        <div class="social-media-links">
+            <a href="#"><img src="../../images/LI-In-Bug.png" alt="linkedin logo"></a>
+            <a id="youtube" href="#"><img src="../../images/yt_icon_rgb.png" alt="youtube icon"></a>
+        </div>
+    </div>
+</body>
+
 </html>
