Update home video, update contact page style and add picture for frontpage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <div class="content">
             <div class="title">
-                <h1>JT Geophysics</h1>
+                <h1>JT Geofísica Consulting</h1>
             </div>
             
             <div class="card reverse-layout">
