Add flag button to contact and index pages, both languages

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <a href="#" class="nav-link">Background</a>
                     <a href="#" class="nav-link">Blog</a>
                     <a href="#" class="nav-link">Contact</a>
+                    <a href="#" class="nav-link change-language"><img src="images/ea.svg" alt="flag of spain"></a>
                 </div>
             </nav>
         </header>
