--- a/pages/es/contact-es.html
+++ b/pages/es/contact-es.html
@@ -24,6 +24,7 @@
                 <a href="#" class="nav-link">Background</a>
                 <a href="#" class="nav-link">Blog</a>
                 <a href="#" class="nav-link current">Contact</a>
+                <a href="#" class="nav-link change-language"><img src="../../images/gb.svg" alt="flag of the united kingdom"></a>
             </div>
         </nav>
     </header>
