--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,6 +23,7 @@
                     <a href="#" class="nav-link">Background</a>
                     <a href="#" class="nav-link">Blog</a>
                     <a href="#" class="nav-link current">Contact</a>
+                    <a href="#" class="nav-link change-language"><img src="../images/ea.svg" alt="flag of spain"></a>
                 </div>
             </nav>
         </header>
