--- a/pages/es/index-es.html
+++ b/pages/es/index-es.html
@@ -33,7 +33,7 @@
         
         <div class="content">
             <div class="title">
-                <h1>JT Geophysics</h1>
+                <h1>JT Geofísica Consultoria</h1>
             </div>
             
             <div class="card reverse-layout">
