Restart frontpage, add basic html structure

--- a/frontpage.html
+++ b/frontpage.html
@@ -9,19 +9,13 @@
     <link rel="icon" href="images/logo-jat.png">
     <title>JT Geofísica</title>
   </head>
-  
+
   <body>
-    <div class="photo">
-      <img src="images/jat-picture.jpeg" alt="">
+    <div class="display-picture">
+      
     </div>
-    <div class="logo-and-text">
-      <img src="images/homepage-logo.png" alt="">
-      <div class="text">
-        <h2>Geophysical Consultant</h2>
-        <p>Oil & Gas Reservoir Seismic Services</p>
-        <p>Project Execution & Guidance</p>
-        <p>Staff Training & Mentoring</p>
-      </div>
+    <div class="logo-info-container">
+
     </div>
   </body>
 </html>
