Add picture and other elements to page. Start alignment process

--- a/frontpage.html
+++ b/frontpage.html
@@ -12,10 +12,19 @@
 
   <body>
     <div class="display-picture">
-      
+      <img src="images/retrato_portada.png" alt="">
     </div>
     <div class="logo-info-container">
-
+      <div class="logo-full">
+        <img src="images/homepage-logo.png" alt="">
+      </div>
+      <h1 class="yellow-words">Geophysical Consultant</h1>
+      <h2 class="service">Oil & Gas Reservoir Seismic Services</h2>
+      <h2 class="service">Project Execution & Guidance</h2>
+      <h2 class="service">Staff Training & Mentoring</h2>
+    </div>
+    <div class="more-buttton">
+      <button id="more-button">more</button>
     </div>
   </body>
 </html>
