Update 'more' button appearance

--- a/frontpage.html
+++ b/frontpage.html
@@ -18,13 +18,16 @@
       <div class="logo-full">
         <img src="images/homepage-logo.png" alt="">
       </div>
-      <h1 class="yellow-words">Geophysical Consultant</h1>
+      <div class="mobile-button-container">
+        <h1 class="yellow-words">Geophysical Consultant</h1>
+        <button class="more-button-mobile">more</button>
+      </div>
       <h2 class="service">Oil & Gas Reservoir Seismic Services</h2>
       <h2 class="service">Project Execution & Guidance</h2>
       <h2 class="service">Staff Training & Mentoring</h2>
     </div>
-    <div class="more-buttton">
-      <button id="more-button">more</button>
+    <div class="more">
+      <button id="more-button-desktop">more</button>
     </div>
   </body>
 </html>
