Fix frontpage layout mobile

--- a/frontpage.html
+++ b/frontpage.html
@@ -11,23 +11,26 @@
   </head>
 
   <body>
-    <div class="display-picture">
-      <img src="images/retrato_portada.png" alt="">
-    </div>
-    <div class="logo-info-container">
-      <div class="logo-full">
-        <img src="images/homepage-logo.png" alt="">
+    <div class="content">
+      <div class="display-picture">
+        <img src="images/retrato_portada.png" alt="">
       </div>
-      <div class="mobile-button-container">
-        <h1 class="yellow-words">Geophysical Consultant</h1>
-        <button class="more-button-mobile">more</button>
+      
+      <div class="logo-info-container">
+        <div class="logo-full">
+          <img src="images/homepage-logo.png" alt="">
+        </div>
+        <div class="mobile-button-container">
+          <h1 class="yellow-words">Geophysical Consultant</h1>
+          <button class="more-button-mobile">more</button>
+        </div>
+        <h2 class="service">Oil & Gas Reservoir Seismic Services</h2>
+        <h2 class="service">Project Execution & Guidance</h2>
+        <h2 class="service">Staff Training & Mentoring</h2>
       </div>
-      <h2 class="service">Oil & Gas Reservoir Seismic Services</h2>
-      <h2 class="service">Project Execution & Guidance</h2>
-      <h2 class="service">Staff Training & Mentoring</h2>
-    </div>
-    <div class="more">
-      <button id="more-button-desktop">more</button>
-    </div>
+      <div class="more">
+        <button id="more-button-desktop">more</button>
+      </div>
+      </div>
   </body>
 </html>
