--- a/frontpage.html
+++ b/frontpage.html
@@ -24,13 +24,13 @@
           <h1 class="yellow-words">Geophysical Consultant</h1>
           <button class="more-button-mobile">more</button>
         </div>
-        <h2 class="service">Oil & Gas Reservoir Seismic Services</h2>
-        <h2 class="service">Project Execution & Guidance</h2>
-        <h2 class="service">Staff Training & Mentoring</h2>
+        <p class="service">Oil & Gas Reservoir Seismic Services</p>
+        <p class="service">Project Execution & Guidance</p>
+        <p class="service">Staff Training & Mentoring</p>
+        <div class="more">
+          <button class="more-button-desktop">more</button>
+        </div>
       </div>
-      <div class="more">
-        <button id="more-button-desktop">more</button>
-      </div>
-      </div>
+    </div>
   </body>
 </html>
