Add icon to 'more' button

--- a/frontpage.html
+++ b/frontpage.html
@@ -22,13 +22,13 @@
         </div>
         <div class="mobile-button-container">
           <h1 class="yellow-words">Geophysical Consultant</h1>
-          <button class="more-button-mobile">more</button>
+          <button class="more-button-mobile">more<img src="images/expand_more.svg" alt=""></button>
         </div>
         <p class="service">Oil & Gas Reservoir Seismic Services</p>
         <p class="service">Project Execution & Guidance</p>
         <p class="service">Staff Training & Mentoring</p>
         <div class="more">
-          <button class="more-button-desktop">more</button>
+          <button class="more-button-desktop">more<img src="images/expand_more.svg" alt=""></button>
         </div>
       </div>
     </div>
