Add language change link to frontpage

--- a/frontpage.html
+++ b/frontpage.html
@@ -32,5 +32,6 @@
         </div>
       </div>
     </div>
+    <a class="change-language" href="#"><img src="images/ea.svg" alt=""></a>
   </body>
 </html>
