Update stylesheet, script and images links on renamed and moved files

--- a/pages/home.html
+++ b/pages/home.html
@@ -4,17 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles/normalize.css">
-        <link rel="stylesheet" href="styles/index-style.css">
-        <link rel="icon" href="images/logo.png">
-        <script src="scripts/dropdown-menu.js" defer></script>
-        <script src="scripts/slideshow.js" defer></script>
+        <link rel="stylesheet" href="../styles/normalize.css">
+        <link rel="stylesheet" href="../styles/home.css">
+        <link rel="icon" href="../images/logo.png">
+        <script src="../scripts/dropdown-menu.js" defer></script>
+        <script src="../scripts/slideshow.js" defer></script>
         <title>JT Geofísica</title>
     </head>
     
     <body>
         <header>
-            <a href="#"><img src="images/logo.png" alt="logo"></a>
+            <a href="#"><img src="../images/logo.png" alt="logo"></a>
             <nav>
                 <button class="dropbtn">Menu</button>
                 <div class="dropdown-content">
@@ -24,7 +24,7 @@
                     <a href="#" class="nav-link">Background</a>
                     <a href="#" class="nav-link">Blog</a>
                     <a href="#" class="nav-link">Contact</a>
-                    <a href="#" class="nav-link change-language"><img src="images/ea.svg" alt="flag of spain"></a>
+                    <a href="#" class="nav-link change-language"><img src="../images/ea.svg" alt="flag of spain"></a>
                 </div>
             </nav>
         </header>
@@ -63,7 +63,7 @@
                     <p>Geology -the petroleum system to be more precise-  explains the occurrence of economical hydrocarbon accumulations. So, it is not about reaching a “magic attribute that finds oil”  but the integration to a multidisciplinary predictive system for risk minimizing instead. In other words, only by the contribution to geological knowledge is that Geophysics does help.​</p>
                 </div>
                 <div class="card-media chart">
-                    <img src="images/homepage-chart-english.jpg" alt="chart">
+                    <img src="../images/homepage-chart-english.jpg" alt="chart">
                 </div>
             </div>
 
@@ -88,7 +88,7 @@
                 </div>
                 <div class="card-media">
                     <video autoplay muted loop>
-                        <source src="videos/video_mapa.mp4">
+                        <source src="../videos/video_mapa.mp4">
                     </video>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                 </div>
                 <div class="card-media slideshow-container">
                     <div class="mySlides fade">
-                        <img src="images/desert-sample.jpeg" alt="desert">
+                        <img src="../images/desert-sample.jpeg" alt="desert">
                     </div>
                     <div class="mySlides fade">
-                        <img src="images/forest-sample.jpeg" alt="forest">
+                        <img src="../images/forest-sample.jpeg" alt="forest">
                     </div>
                     <div class="mySlides fade">
-                        <img src="images/mountains-sample.jpeg" alt="mountains">
+                        <img src="../images/mountains-sample.jpeg" alt="mountains">
                     </div>
                 </div>
             </div>
