--- a/pages/es/home-es.html
+++ b/pages/es/home-es.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../styles/normalize.css">
-        <link rel="stylesheet" href="../../styles/index-style.css">
+        <link rel="stylesheet" href="../../styles/home.css">
         <link rel="icon" href="../../images/logo.png">
         <script src="../../scripts/dropdown-menu.js" defer></script>
         <script src="../../scripts/slideshow.js" defer></script>
