Update all links to work with new folder structure

--- a/index.html
+++ b/index.html
@@ -6,32 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="icon" href="images/logo-jat.png">
+    <link rel="icon" href="assets/icons/logo.png">
     <title>JT Geofísica</title>
   </head>
 
   <body>
     <div class="content">
       <div class="display-picture">
-        <img src="images/retrato_portada.png" alt="">
+        <img src="assets/images/retrato_portada.png" alt="">
       </div>
       
       <div class="logo-info-container">
         <div class="logo-full">
-          <img src="images/homepage-logo.png" alt="">
+          <img src="assets/icons/homepage-logo.png" alt="">
         </div>
         <div class="mobile-button-container">
           <h1 class="yellow-words">Geophysical Consultant</h1>
-          <button class="more-button-mobile">more<img src="images/expand_more.svg" alt=""></button>
+          <button class="more-button-mobile">more<img src="assets/icons/expand_more.svg" alt=""></button>
         </div>
         <p class="service">Oil & Gas Reservoir Seismic Services</p>
         <p class="service">Project Execution & Guidance</p>
         <p class="service">Staff Training & Mentoring</p>
         <div class="more">
-          <button class="more-button-desktop">more<img src="images/expand_more.svg" alt=""></button>
+          <button class="more-button-desktop">more<img src="assets/icons/expand_more.svg" alt=""></button>
         </div>
       </div>
     </div>
-    <a class="change-language" href="#"><img src="images/ea.svg" alt=""></a>
+    <a class="change-language" href="#"><img src="assets/icons/ea.svg" alt=""></a>
   </body>
 </html>
