--- a/pages/es/contact-es.html
+++ b/pages/es/contact-es.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/normalize.css">
     <link rel="stylesheet" href="../../styles/contact.css">
-    <link rel="icon" href="../../images/logo.png">
+    <link rel="icon" href="../../assets/icons/logo.png">
     <script src="../../scripts/dropdown-menu.js" defer></script>
     <title>JT Geofísica</title>
 </head>
 
 <body>
     <header>
-        <a href="#"><img src="../../images/logo.png" alt="logo"></a>
+        <a href="#"><img src="../../assets/icons/logo.png" alt="logo"></a>
         <nav>
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
@@ -24,7 +24,7 @@
                 <a href="#" class="nav-link">Background</a>
                 <a href="#" class="nav-link">Blog</a>
                 <a href="#" class="nav-link current">Contact</a>
-                <a href="#" class="nav-link change-language"><img src="../../images/gb.svg" alt="flag of the united kingdom"></a>
+                <a href="#" class="nav-link change-language"><img src="../../assets/icons/gb.svg" alt="flag of the united kingdom"></a>
             </div>
         </nav>
     </header>
@@ -49,8 +49,8 @@
         </div>
         <h2 id="social">Seguime</h2>
         <div class="social-media-links">
-            <a href="#"><img src="../../images/LI-In-Bug.png" alt="linkedin logo"></a>
-            <a id="youtube" href="#"><img src="../../images/yt_icon_rgb.png" alt="youtube icon"></a>
+            <a href="#"><img src="../../assets/icons/LI-In-Bug.png" alt="linkedin logo"></a>
+            <a id="youtube" href="#"><img src="../../assets/icons/yt_icon_rgb.png" alt="youtube icon"></a>
         </div>
     </div>
 </body>
