--- a/pages/es/home-es.html
+++ b/pages/es/home-es.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../styles/normalize.css">
         <link rel="stylesheet" href="../../styles/home.css">
-        <link rel="icon" href="../../images/logo.png">
+        <link rel="icon" href="../../assets/icons/logo.png">
         <script src="../../scripts/dropdown-menu.js" defer></script>
         <script src="../../scripts/slideshow.js" defer></script>
         <title>JT Geofísica</title>
@@ -14,7 +14,7 @@
     
     <body>
         <header>
-            <a href="#"><img src="../../images/logo.png" alt="logo"></a>
+            <a href="#"><img src="../../assets/icons/logo.png" alt="logo"></a>
             <nav>
                 <button class="dropbtn">Menu</button>
                 <div class="dropdown-content">
@@ -24,7 +24,7 @@
                     <a href="#" class="nav-link">Background</a>
                     <a href="#" class="nav-link">Blog</a>
                     <a href="#" class="nav-link">Contact</a>
-                    <a href="#" class="nav-link change-language"><img src="../../images/gb.svg" alt="flag of the united kingdom"></a>
+                    <a href="#" class="nav-link change-language"><img src="../../assets/icons/gb.svg" alt="flag of the united kingdom"></a>
                 </div>
             </nav>
         </header>
@@ -61,7 +61,7 @@
                     <p>La geología – más precisamente el sistema petrolero- explica la ocurrencia de acumulaciones explotables de hidrocarburos por lo que no existe “el atributo mágico que encuentra petróleo”, sino la integración a un sistema predictivo para la minimización de riesgo. Dicho de otro modo, el aporte de la Geofísica debe ser a través de la contribución al conocimiento geológico.​​</p>
                 </div>
                 <div class="card-media chart">
-                    <img src="../../images/homepage-chart-spanish.jpg" alt="chart">
+                    <img src="../../assets/images/homepage-chart-spanish.jpg" alt="chart">
                 </div>
             </div>
 
@@ -86,7 +86,7 @@
                 </div>
                 <div class="card-media">
                     <video autoplay muted loop>
-                        <source src="../../videos/video_mapa.mp4">
+                        <source src="../../assets/videos/video_mapa.mp4">
                     </video>
                 </div>
             </div>
@@ -101,13 +101,13 @@
                 </div>
                 <div class="card-media slideshow-container">
                     <div class="mySlides fade">
-                        <img src="../../images/desert-sample.jpeg" alt="desert">
+                        <img src="../../assets/images/desert-sample.jpeg" alt="desert">
                     </div>
                     <div class="mySlides fade">
-                        <img src="../../images/forest-sample.jpeg" alt="forest">
+                        <img src="../../assets/images/forest-sample.jpeg" alt="forest">
                     </div>
                     <div class="mySlides fade">
-                        <img src="../../images/mountains-sample.jpeg" alt="mountains">
+                        <img src="../../assets/images/mountains-sample.jpeg" alt="mountains">
                     </div>
                 </div>
             </div>
