--- a/pages/es/index-es.html
+++ b/pages/es/index-es.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/normalize.css">
     <link rel="stylesheet" href="../../styles/index.css">
-    <link rel="icon" href="assets/icons/logo.png">
+    <link rel="icon" href="../../assets/icons/logo.png">
     <title>JT Geofísica</title>
   </head>
 
