Add links for working pages

--- a/pages/es/index-es.html
+++ b/pages/es/index-es.html
@@ -23,17 +23,17 @@
         </div>
         <div class="mobile-button-container">
           <h1 class="yellow-words">Consultor Geofísico</h1>
-          <button class="more-link-mobile">more<img src="../../assets/icons/expand_more.svg" alt=""></button>
+          <a class="more-link-mobile" href="../../pages/es/home-es.html">more<img src="../../assets/icons/expand_more.svg" alt=""></a>
         </div>
         <p class="service">Servicios Sísmicos Para Reservorios de Petróleo y Gas</p>
         <p class="service">Ejecución y Guíado de Proyectos </p>
         <p class="service">Entrenamiento y Orientación de Personal</p>
         <div class="more">
-          <a class="more-link-desktop" href="#">more<img src="../../assets/icons/expand_more.svg" alt=""></a>
+          <a class="more-link-desktop" href="../../pages/es/home-es.html">more<img src="../../assets/icons/expand_more.svg" alt=""></a>
         </div>
       </div>
     </div>
-    <a class="change-language" href="#"><img src="../../assets/icons/gb.svg" alt=""></a>
+    <a class="change-language" href="../../index.html"><img src="../../assets/icons/gb.svg" alt=""></a>
   </body>
 
 </html>
