--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         </div>
         <div class="mobile-button-container">
           <h1 class="yellow-words">Geophysical Consultant</h1>
-          <button class="more-link-mobile">more<img src="assets/icons/expand_more.svg" alt=""></button>
+          <a class="more-link-mobile" href="pages/home.html">more<img src="assets/icons/expand_more.svg" alt=""></a>
         </div>
         <p class="service">Oil & Gas Reservoir Seismic Services</p>
         <p class="service">Project Execution & Guidance</p>
         <p class="service">Staff Training & Mentoring</p>
         <div class="more">
-          <a class="more-link-desktop" href="#">more<img src="assets/icons/expand_more.svg" alt=""></a>
+          <a class="more-link-desktop" href="pages/home.html">more<img src="assets/icons/expand_more.svg" alt=""></a>
         </div>
       </div>
     </div>
-    <a class="change-language" href="#"><img src="assets/icons/ea.svg" alt=""></a>
+    <a class="change-language" href="pages/es/index-es.html"><img src="assets/icons/ea.svg" alt=""></a>
   </body>
 </html>
