--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,13 +17,13 @@
             <nav>
                 <button class="dropbtn">Menu</button>
                 <div class="dropdown-content">
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="home.html" class="nav-link">Home</a>
                     <a href="#" class="nav-link">Services</a>
                     <a href="#" class="nav-link">Training</a>
                     <a href="#" class="nav-link">Background</a>
                     <a href="#" class="nav-link">Blog</a>
-                    <a href="#" class="nav-link current">Contact</a>
-                    <a href="#" class="nav-link change-language"><img src="../assets/icons/ea.svg" alt="flag of spain"></a>
+                    <a href="contact.html" class="nav-link current">Contact</a>
+                    <a href="es/contact-es.html" class="nav-link change-language"><img src="../assets/icons/ea.svg" alt="flag of spain"></a>
                 </div>
             </nav>
         </header>
