--- a/pages/home.html
+++ b/pages/home.html
@@ -18,13 +18,13 @@
             <nav>
                 <button class="dropbtn">Menu</button>
                 <div class="dropdown-content">
-                    <a href="#" class="nav-link current">Home</a>
+                    <a href="home.html" class="nav-link current">Home</a>
                     <a href="#" class="nav-link">Services</a>
                     <a href="#" class="nav-link">Training</a>
                     <a href="#" class="nav-link">Background</a>
                     <a href="#" class="nav-link">Blog</a>
-                    <a href="#" class="nav-link">Contact</a>
-                    <a href="#" class="nav-link change-language"><img src="../assets/icons/ea.svg" alt="flag of spain"></a>
+                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="es/home-es.html" class="nav-link change-language"><img src="../assets/icons/ea.svg" alt="flag of spain"></a>
                 </div>
             </nav>
         </header>
